# kiboverse

./: .gitignore  Cargo.toml  README.md  deploy.sh  justfile  server-design.md  voiceflow.md
docs/: data.md  uiux-redesign.md
ios/: README.md  deploy  project.yml
ios/Kibo/: AppStore.swift  AskKiboButton.swift  AttachmentPickers.swift  AudioCoordinator.swift  AudioRecorder.swift  CenterState+Phone.swift  ConversationDetailView.swift  ConversationListView.swift  ImageCache.swift  KiboApp.swift  KiboIntents.swift  KiboRouter.swift  LibraryView.swift  MicButton.swift  PCMStreamLedger.swift  PendingUploadSpool.swift  ReplySession.swift  RootView.swift  SettingsView.swift  SpeechPlayer.swift  SpeechRenderer.swift  TalkModeView.swift  TalkView.swift
ios/KiboShare/: ShareIntakeModel.swift  ShareView.swift  ShareViewController.swift
ios/KiboTests/: CenterStatePhoneTests.swift  ImageNormalizerTests.swift  ImageSupportTests.swift  KiboAPITests.swift  PendingAttachmentSpoolTests.swift  ShareExtensionSeamTests.swift
ios/KiboUITests/: ImageFlowTests.swift  ScreenshotTests.swift  ShareFlowTests.swift
ios/KiboWatch/: KiboWatchApp.swift  WatchAudio.swift  WatchTalkView.swift  (+3 more)
kibod/: Cargo.toml  README.md
kibod/assets/: app.css  app.js  knowledge-query.js
kibod/src/: agentic.rs  ai.rs  api.rs  journal.rs  knowledge.rs  lib.rs  main.rs  model.rs  state.rs  store.rs  ui.rs  workflow.rs
original/: f2.py  f3.py  f4.py  f6.py  f7.py  f8.py  f9.py  face.py
pi-config/: deploy-ptt-remote.sh
recplay/: Cargo.toml
respeaker/: README.md  platformio.ini
tests/: deploy-ptt.sh
(+58 files in other folders)
