[package]
name = "kibod"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0"
async-stream = "0.3"
axum = { version = "0.8", features = ["ws"] }
base64 = "0.22"
bytes = "1.10"
chrono = { version = "0.4", features = ["serde"] }
futures-util = "0.3"
fs2 = "0.4"
hound = "3.5"
http = "1.3"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "stream"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
tokio = { version = "1.47", features = ["fs", "macros", "process", "rt-multi-thread", "signal", "sync", "time"] }
tower-http = { version = "0.6", features = ["limit", "trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1.18", features = ["serde", "v4"] }

[dev-dependencies]
tempfile = "3.20"
tower = { version = "0.5", features = ["util"] }
